--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pricing</title>
-    <link rel="stylesheet" href="./Pricing.css">
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 
@@ -141,6 +141,5 @@
 
     </div>
 </body>
-<script src="./Pricing.js"></script>
 
 </html>
